--- a/llama/env_requirements/install.txt
+++ b/llama/env_requirements/install.txt
@@ -9,3 +9,7 @@ set CMAKE_ARGS=-DLLAMA_CUBLAS=on
 pip install llama-cpp-python --no-cache-dir
 
 set "CMAKE_ARGS=-DLLAMA_CUBLAS=on" && pip install llama-cpp-python --no-cache-dir
+
+
+# conda install pytorch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 pytorch-cuda=11.8 -c pytorch -c nvidia
+# nvidia cuda 11.6.134 driver
